// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InnerLayoutButtons to match snapshot - add 1`] = `
<body>
  <div>
    <div>
      <a
        href="/companys"
      >
        <button
          class="btn btn-secondary"
          flow="add,save"
          link="/companys"
          type="button"
        >
          Cancel
        </button>
      </a>
         
      <button
        class="btn btn-primary"
        flow="add"
        type="submit"
      >
        Add Company
      </button>
         
    </div>
  </div>
</body>
`;

exports[`InnerLayoutButtons to match snapshot - edit 1`] = `
<body>
  <div>
    <div>
      <button
        class="inner-layout-actions btn btn-link"
        flow="edit"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-times fa-w-10 "
          color="#212529"
          data-icon="times"
          data-prefix="fal"
          focusable="false"
          role="img"
          style="font-size: 1.5rem;"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
          />
        </svg>
      </button>
         
      <button
        class="inner-layout-actions btn btn-link"
        flow="edit"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-pencil-alt fa-w-16 "
          color="#212529"
          data-icon="pencil-alt"
          data-prefix="fal"
          focusable="false"
          role="img"
          style="font-size: 1.5rem;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M493.255 56.236l-37.49-37.49c-24.993-24.993-65.515-24.994-90.51 0L12.838 371.162.151 485.346c-1.698 15.286 11.22 28.203 26.504 26.504l114.184-12.687 352.417-352.417c24.992-24.994 24.992-65.517-.001-90.51zM164.686 347.313c6.249 6.249 16.379 6.248 22.627 0L368 166.627l30.059 30.059L174 420.745V386h-48v-48H91.255l224.059-224.059L345.373 144 164.686 324.687c-6.249 6.248-6.249 16.378 0 22.626zm-38.539 121.285l-58.995 6.555-30.305-30.305 6.555-58.995L63.255 366H98v48h48v34.745l-19.853 19.853zm344.48-344.48l-49.941 49.941-82.745-82.745 49.941-49.941c12.505-12.505 32.748-12.507 45.255 0l37.49 37.49c12.506 12.506 12.507 32.747 0 45.255z"
            fill="currentColor"
          />
        </svg>
      </button>
         
    </div>
  </div>
</body>
`;

exports[`InnerLayoutButtons to match snapshot - save 1`] = `
<body>
  <div>
    <div>
      <a
        href="/companys"
      >
        <button
          class="btn btn-secondary"
          flow="add,save"
          link="/companys"
          type="button"
        >
          Cancel
        </button>
      </a>
         
      <button
        class="btn btn-primary"
        flow="save"
        type="submit"
      >
        Save
      </button>
    </div>
  </div>
</body>
`;
